deploy/argo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: maestro-server
  namespace: intelgraph-prod
  labels:
    app: maestro-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: maestro-server
---
apiVersion: v1
kind: Service
metadata:
  name: maestro-server-canary
  namespace: intelgraph-prod
  labels:
    app: maestro-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: maestro-server
